--- a/cafe/3.html
+++ b/cafe/3.html
@@ -1,1 +1,1 @@
-<img src="https://01ste02.github.io/displayMaterial/cafe/3.png"  width="1080" height="1920">
+<img src="https://01ste02.github.io/displayMaterial/cafe/3.jpg"  width="1080" height="1920">
