--- a/sexet/3.html
+++ b/sexet/3.html
@@ -1,1 +1,1 @@
-<img src="https://01ste02.github.io/displayMaterial/sexet/3.png"  width="1080" height="1920">
+<img src="https://01ste02.github.io/displayMaterial/sexet/meny.jpg"  width="1080" height="1920">
