html refererar till bildfilen

--- a/cafe/1.html
+++ b/cafe/1.html
@@ -1,1 +1,1 @@
-<img src="https://01ste02.github.io/displayMaterial/cafe/dryck.png"  width="1080" height="1920">
+<img src="dryck.png"  width="1080" height="1920">
