--- a/cafe/2.html
+++ b/cafe/2.html
@@ -1,1 +1,1 @@
-<img src="https://01ste02.github.io/displayMaterial/cafe/mat.png"  width="1080" height="1920">
+<img src="mat.png"  width="1080" height="1920">
