--- a/cafe/3.html
+++ b/cafe/3.html
@@ -1,1 +1,1 @@
-<img src="https://github.com/01ste02/displayMaterial/blob/main/cafe/info.pdf"  width="1080" height="1920">
+<img src="https://github.com/01ste02/displayMaterial/blob/main/cafe/info.png"  width="1080" height="1920">
